add corpse hb animation

--- a/util/lang/assets/animation_type_kr.json
+++ b/util/lang/assets/animation_type_kr.json
@@ -53,7 +53,8 @@
   },
   "ZombieEff": {
     "DOWN": "녹다운",
-    "REVIVE": "부활"
+    "REVIVE": "부활",
+    "BACK" : "밀쳐남"
   },
   "SoulType": {
     "DEF": "기본"
