Fix JP anim viewer crash bug

--- a/util/lang/assets/animation_type_jp.json
+++ b/util/lang/assets/animation_type_jp.json
@@ -53,7 +53,8 @@
   },
   "ZombieEff": {
     "DOWN": "死",
-    "REVIVE": "復活"
+    "REVIVE": "復活",
+    "BACK": "ふっとばす"
   },
   "SoulType": {
     "DEF": "デフォルト"
