--- a/util/lang/assets/proc_kr.json
+++ b/util/lang/assets/proc_kr.json
@@ -571,6 +571,10 @@
                 "name": "배경 ID",
                 "tooltip": "능력 발동 시 변경될 배경을 정합니다"
             },
+            "mus": {
+                "name": "BGM ID",
+                "tooltip": null
+            },
             "type.kill": {
                 "name": "개체 제거",
                 "tooltip": "능력 발동 시 해당 필드의 모든 개체를 제거합니다"
