Fix Proc_es.json again

--- a/util/lang/assets/proc_es.json
+++ b/util/lang/assets/proc_es.json
@@ -270,7 +270,7 @@
         "abbr_name": "imu. Rep",
         "full_name": "Inmune/Resistente ante Repulsión",
         "tooltip": null,
-        "format": ["[(mult!=0&block!=100){[(mult==100){Inmune}(mult<100&mult>0){Resistente}(mult<0){Débil}] ante Repulsión",
+        "format": ["[(mult!=0&block!=100){[(mult==100){Inmune}(mult<100&mult>0){Resistente}(mult<0){Débil}]}] ante Repulsión",
             "[(mult<100&mult>0){ (_left)Reduce la distancia un (mult)%(_right)}(mult<0){ (_left)Aumenta la distancia un (_abs(mult))%(_right)}]",
             "[(block!=0&block<100){ & }]}][(block!=0){[(block==100){Bloqueador de}(block<100&block>0){Absorbedor de}(block<0){Aumentador de}(block!=0) Repulsión}]",
             "[(block<100&block>0){ (_left)Reduce la distancia un (block)%(_right)}(block<0){ (_left)Aumenta la distancia un (_abs(block))%(_right)}]}]"],
@@ -289,7 +289,7 @@
         "abbr_name": "imu. Para",
         "full_name": "Inmune/Resistente ante Parálisis",
         "tooltip": null,
-        "format": ["[(mult!=0&block!=100){[(mult==100){Inmune}(mult<100&mult>0){Resistente}(mult<0){Débil}] ante Parálisis",
+        "format": ["[(mult!=0&block!=100){[(mult==100){Inmune}(mult<100&mult>0){Resistente}(mult<0){Débil}]}] ante Parálisis",
             "[(mult<100&mult>0){ (_left)Reduce la duración un (mult)%(_right)}(mult<0){ (_left)Aumenta la duración un (_abs(mult))%(_right)}]",
             "[(block!=0&block<100){ & }]}][(block!=0){[(block==100){Bloqueador de}(block<100&block>0){Absorbedor de}(block<0){Aumentador de}(block!=0) Parálisis}]",
             "[(block<100&block>0){ (_left)Reduce la duración un (block)%(_right)}(block<0){ (_left)Aumenta la duración un (_abs(block))%(_right)}]}]"],
@@ -308,7 +308,7 @@
         "abbr_name": "imu. Ralent",
         "full_name": "Inmune/Resistente ante Ralentización",
         "tooltip": null,
-        "format": ["[(mult!=0&block!=100){[(mult==100){Inmune}(mult<100&mult>0){Resistente}(mult<0){Débil}] ante Ralentización",
+        "format": ["[(mult!=0&block!=100){[(mult==100){Inmune}(mult<100&mult>0){Resistente}(mult<0){Débil}]}] ante Ralentización",
             "[(mult<100&mult>0){ (_left)Reduce la duración un (mult)%(_right)}(mult<0){ (_left)Aumenta la duración un (_abs(mult))%(_right)}]",
             "[(block!=0&block<100){ & }]}][(block!=0){[(block==100){Bloqueador de}(block<100&block>0){Absorbedor de}(block<0){Aumentador de}(block!=0) Ralentización}]",
             "[(block<100&block>0){ (_left)Reduce la duración un (block)%(_right)}(block<0){ (_left)Aumenta la duración un (_abs(block))%(_right)}]}]"],
@@ -339,7 +339,7 @@
         "abbr_name": "imu. Desgaste",
         "full_name": "Inmune/Resistente ante Desgaste",
         "tooltip": null,
-        "format": ["[(mult!=0&block!=100){[(mult==100){Inmune}(mult<100&mult>0){Resistente}(mult<0){Débil}] ante el Desgaste",
+        "format": ["[(mult!=0&block!=100){[(mult==100){Inmune}(mult<100&mult>0){Resistente}(mult<0){Débil}]}] ante el Desgaste",
             "[(mult<100&mult>0){ (_left)Reduce la duración un (mult)%(_right)}(mult<0){ (_left)Aumenta la duración un (_abs(mult))%(_right)}]",
             "[(block!=0&block<100){ & }]}][(block!=0){[(block==100){Bloqueador de}(block<100&block>0){Absorbedor de}(block<0){Aumentador de}(block!=0) Desgaste}]",
             "[(block<100&block>0){ (_left)Reduce la duración um (block)%(_right)}(block<0){ (_left)Aumenta la duración un (_abs(block))%(_right)}]}]",
@@ -363,7 +363,7 @@
         "abbr_name": "imu. Abduc",
         "full_name": "Inmune/Resistente ante Abducción",
         "tooltip": null,
-        "format": ["[(mult!=0&block!=100){[(mult==100){Inmune}(mult<100&mult>0){Resistente}(mult<0){Débil}] ante Abducción",
+        "format": ["[(mult!=0&block!=100){[(mult==100){Inmune}(mult<100&mult>0){Resistente}(mult<0){Débil}]}] ante Abducción",
             "[(mult<100&mult>0){ (_left)Reduce la duración un (mult)%(_right)}(mult<0){ (_left)Aumenta la duración un (_abs(mult))%(_right)}]",
             "[(block!=0&block<100){ & }]}][(block!=0){[(block==100){Bloqueador de}(block<100&block>0){Absorbedor de}(block<0){Aumentador de}(block!=0) Abducción}]",
             "[(block<100&block>0){ (_left)Reduce la duración un (block)%(_right)}(block<0){ (_left)Aumenta la duración un (_abs(block))%(_right)}]}]"],
@@ -382,7 +382,7 @@
         "abbr_name": "imu. Mald.",
         "full_name": "Inmune/Resistente ante Maldición",
         "tooltip": null,
-        "format": ["[(mult!=0&block!=100){[(mult==100){Inmune}(mult<100&mult>0){Resistente}(mult<0){Débil}] ante Maldición",
+        "format": ["[(mult!=0&block!=100){[(mult==100){Inmune}(mult<100&mult>0){Resistente}(mult<0){Débil}]}] ante Maldición",
             "[(mult<100&mult>0){ (_left)Reduce la duración un (mult)%(_right)}(mult<0){ (_left)Aumenta la duración un (_abs(mult))%(_right)}]",
             "[(block!=0&block<100){ & }]}][(block!=0){[(block==100){Bloqueador de}(block<100&block>0){Absorbedor de}(block<0){Aumentador de}(block!=0) Maldición}]",
             "[(block<100&block>0){ (_left)Reduce la duración un (block)%(_right)}(block<0){ (_left)Aumenta la duración un (_abs(block))%(_right)}]}]"],
@@ -399,9 +399,9 @@
     },
     "IMUSEAL": {
         "abbr_name": "imu. Sellar",
-        "full_name": "Inmune/Resistente ante Sellar",
+        "full_name": "Inmune/Resistente ante Sellamiento",
         "tooltip": null,
-        "format": ["[(mult!=0&block!=100){[(mult==100){Inmune}(mult<100&mult>0){Resistente}(mult<0){Débil}] ante Sellar",
+        "format": ["[(mult!=0&block!=100){[(mult==100){Inmune}(mult<100&mult>0){Resistente}(mult<0){Débil}]}] ante Sellamiento",
             "[(mult<100&mult>0){ (_left)Reduce la duración un (mult)%(_right)}(mult<0){ (_left)Aumenta la duración un (_abs(mult))%(_right)}]",
             "[(block!=0&block<100){ & }]}][(block!=0){[(block==100){Bloqueador de}(block<100&block>0){Absorbedor de}(block<0){Aumentador de}(block!=0) Sellar}]",
             "[(block<100&block>0){ (_left)Reduce la duración un (block)%(_right)}(block<0){ (_left)Aumenta la duración un (_abs(block))%(_right)}]}]"],
@@ -420,7 +420,7 @@
         "abbr_name": "imu. Invoc",
         "full_name": "Inmune/Resistente ante Invocación",
         "tooltip": null,
-        "format": ["[(mult!=0&block!=100){[(mult==100){Inmune}(mult<100&mult>0){Resistente}(mult<0){Débil}] ante la Invocación con el parámetro Tras golpear/Tras eliminar",
+        "format": ["[(mult!=0&block!=100){[(mult==100){Inmune}(mult<100&mult>0){Resistente}(mult<0){Débil}]}] ante la Invocación con el parámetro Tras golpear/Tras eliminar",
             "[(mult<100&mult>0){ (_left)Reduce un (mult)% de la fuerza de la entidad invocada(_right)}(mult<0){ (_left)Las entidades invocadas serán un (_abs(mult))% más fuertes(_right)}]",
             "[(block!=0&block<100){ & }]}][(block!=0){[(block==100){Bloqueador de}(block<100&block>0){Absorbedor de}(block<0){Aumentador de}(block!=0) Invocación}]",
             "[(block<100&block>0){ (_left)Reduce un (block)% de la fuerza de la entidad invocada(_right)}(block<0){ (_left)Las entidades invocadas serán un (_abs(block))% más fuertes(_right)}]}]"],
@@ -465,7 +465,7 @@
     },
     "SEAL": {
         "abbr_name": "sellar",
-        "full_name": "Sellar",
+        "full_name": "Sellamiento",
         "tooltip": "El Sellado desactivará todas las habilidades exceptuando Escarbar, Metal, Autodestrucción, Sólo Ataca y Revivir básico",
         "format": "probabilidad del (prob)% de sellar al objetivo por (_dispTime(time))",
         "class": {
@@ -696,7 +696,7 @@
         "abbr_name": "imu. Veneno",
         "full_name": "Inmune/Resistente ante el Veneno",
         "tooltip": null,
-        "format": ["[(mult!=0&block!=100){[(mult==100){Inmune}(mult<100&mult>0){Resistente}(mult<0){Débil}] ante Veneno",
+        "format": ["[(mult!=0&block!=100){[(mult==100){Inmune}(mult<100&mult>0){Resistente}(mult<0){Débil}]}] ante Veneno",
             "[(mult<100&mult>0){ (_left)Reduce la duración un (mult)%(_right)}(mult<0){ (_left)Aumenta la duración un (_abs(mult))%(_right)}]",
             "[(block!=0&block<100){ & }]}][(block!=0){[(block==100){Bloqueador}(block<100&block>0){Absorbedor}(block<0){Aumentador} de Veneno}]",
             "[(block<100&block>0){ (_left)Reduce la duración un (block)%(_right)}(block<0){ (_left)Aumenta la duración un (_abs(block))%(_right)}]}]",
@@ -732,7 +732,7 @@
         "abbr_name": "imu. crít",
         "full_name": "Inmunidad ante Daño Crítico",
         "tooltip": null,
-        "format": ["[(mult!=0&block!=100){[(mult==100){Inmune}(mult<100&mult>0){Resistente}(mult<0){Débil}] ante Daño Crítico",
+        "format": ["[(mult!=0&block!=100){[(mult==100){Inmune}(mult<100&mult>0){Resistente}(mult<0){Débil}]}] ante Daño Crítico",
             "[(mult<100&mult>0){ (_left)Reduce el daño recibido un (mult)%(_right)}(mult<0){ (_left)Aumenta el daño recibido un (_abs(mult))%(_right)}]",
             "[(block!=0&block<100){ & }]}][(block!=0){[(block==100){Bloqueador}(block<100&block>0){Absorbedor}(block<0){Aumentador} de Daño Crítico}]",
             "[(block<100&block>0){ (_left)Reduce el daño recibido un (block)%(_right)}(block<0){ (_left)Aumenta el daño recibido un (_abs(block))%(_right)}]}]"],
@@ -823,7 +823,7 @@
         "abbr_name": "imu. toxic",
         "full_name": "Inmune/Resistente ante la Toxicidad",
         "tooltip": null,
-        "format": ["[(mult!=0&block!=100){[(mult==100){Inmune}(mult<100&mult>0){Resistente}(mult<0){Débil}] ante Toxicidad",
+        "format": ["[(mult!=0&block!=100){[(mult==100){Inmune}(mult<100&mult>0){Resistente}(mult<0){Débil}]}] ante Toxicidad",
             "[(mult<100&mult>0){ (_left)Reduce el daño recibido un (mult)%(_right)}(mult<0){ (_left)Aumenta el daño recibido un (_abs(mult))%(_right)}]",
             "[(block!=0&block<100){ & }]}][(block!=0){[(block==100){Bloqueador}(block<100&block>0){Absorbedor}(block<0){Aumentador} de Toxicidad}]",
             "[(block<100&block>0){ (_left)Reduce el daño recibido un (block)%(_right)}(block<0){ (_left)Aumenta el daño recibido un (_abs(block))%(_right)}]}]"],
@@ -904,7 +904,7 @@
         "abbr_name": "Imu. Romp.A",
         "full_name": "Inmune/Resistente ante Romper Armadura",
         "tooltip": null,
-        "format": ["[(mult!=0&block!=100){[(mult==100){Inmune}(mult<100&mult>0){Resistente}(mult<0){Débil}] ante Romper Armadura",
+        "format": ["[(mult!=0&block!=100){[(mult==100){Inmune}(mult<100&mult>0){Resistente}(mult<0){Débil}]}] ante Romper Armadura",
             "[(mult<100&mult>0){ (_left)Reduce la duración un (mult)%(_right)}(mult<0){ (_left)Aumenta la duración un (_abs(mult))%(_right)}]",
             "[(block!=0&block<100){ & }]}][(block!=0){[(block==100){Bloqueador}(block<100&block>0){Absorbedor}(block<0){Aumentador} de Romper Armadura}]",
             "[(block<100&block>0){ (_left)Reduce la duración un (block)%(_right)}(block<0){ (_left)Aumenta la duración un (_abs(block))%(_right)}]}]",
@@ -928,7 +928,7 @@
         "abbr_name": "Imu.Prisa",
         "full_name": "Inmune/Resistente ante Prisa",
         "tooltip": null,
-        "format": ["[(mult!=0&block!=100){[(mult==100){Inmune}(mult<100&mult>0){Resistente}(mult<0){Débil}] ante Prisa",
+        "format": ["[(mult!=0&block!=100){[(mult==100){Inmune}(mult<100&mult>0){Resistente}(mult<0){Débil}]}] ante Prisa",
             "[(mult<100&mult>0){ (_left)Reduce la duración un (mult)%(_right)}(mult<0){ (_left)Aumenta la duración un (_abs(mult))%(_right)}]",
             "[(block!=0&block<100){ & }]}][(block!=0){[(block==100){Bloqueador}(block<100&block>0){Absorbedor}(block<0){Aumentador} de Prisa}]",
             "[(block<100&block>0){ (_left)Reduce la duración un (block)%(_right)}(block<0){ (_left)Aumenta la duración un (_abs(block))%(_right)}]}]",
@@ -1137,7 +1137,7 @@
     },
     "DEATHSURGE": {
         "abbr_name": "Réplica M.",
-        "full_name": "Réplica de Muerte",
+        "full_name": "Réplica Mortal",
         "tooltip": null,
         "format": "probabilidad del (prob)% de crear una réplica por (_dispTime(time)) tras morir (_left)Creada desde el alcance de (dis_0) hasta (dis_1)(_right)",
         "class": {
